--- a/app1/templates/app1/index.html
+++ b/app1/templates/app1/index.html
@@ -7,8 +7,8 @@
         <br>
 
         <div class="text-center">
-
-            <h3> Demo </h3>
+            <div class="firsttext"><h3> Demo </h3></div>
+            
 
             <br>
 
