--- a/app1/templates/app1/base.html
+++ b/app1/templates/app1/base.html
@@ -17,7 +17,7 @@
 
         <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
 
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 
     </head>
 
