--- a/app1/templates/app1/detail.html
+++ b/app1/templates/app1/detail.html
@@ -18,7 +18,7 @@
                 <div class="container-fluid p-3 text-center rounded mx-auto px-auto" style=" width: 90%; background-color: aliceblue;">
 
                     {% if hotel.image %} 
-                    <img src="{{ hotel.image.url }}" class="rounded shadow-lg" style="max-width: 200px;" alt="ảnh lỗi r huhu">
+                    <img src="{{ hotel.image.url }}" class="rounded shadow-lg" style="width: 200px; height: 250px; object-fit: cover;" alt="ảnh lỗi r huhu">
                     {% endif %}
 
                 </div>
@@ -32,8 +32,9 @@
 
                         <h3>Đánh giá</h3>
 
-                    <div class="container rounded px-auto mx-auto p-3" style="min-height: 250px; background-color: #A9A9A9;">
+                    <div class="container rounded px-auto mx-auto p-3" style="min-height: 250px; background-color: #D9D9D9;">
 
+                        <h4>{{hotel.rating}} <i class="fa-solid fa-star" style="color: #fcff52;"></i></h4>
                         
 
                     </div>
@@ -76,7 +77,7 @@
                     
                         <h4>Mô tả</h4>
                         <hr style=" height: 3px; border:none; color: #A9A9A9;background-color: #A9A9A9;">
-                        <div class="container rounded px-auto mx-auto p-3" style="min-height: 250px; background-color: #A9A9A9;">
+                        <div class="container rounded px-auto mx-auto p-3" style="min-height: 250px; background-color: #D9D9D9;">
 
                             <h3>{{ hotel.description }}</h3>
 
@@ -101,56 +102,34 @@
                 <br>
 
                 <div class="row rounded text-center p-2 px-auto mx-auto" style=" background-color: aliceblue;">
-
+                    {% for rooms in rooms %}
                     <div class="col">
 
-                        <div class="container-fluid p-3 text-center rounded mx-auto px-auto" style="width: 97%; background-color: #A9A9A9;" >
+                        <div class="container-fluid p-3 text-center rounded mx-auto px-auto" style="width: 97%; background-color: #D9D9D9;" >
                     
-                            <h5>Room #1</h5>
+                            <h3>{{rooms.name}}</h5>
+                            <h5>{{rooms.price}}$</h5>
 
                             </div>
 
                     </div>
-                    <div class="col">
-
-                        <div class="container-fluid p-3 text-center rounded mx-auto px-auto" style="width: 97%; background-color: #A9A9A9;" >
-                    
-                            <h5>Room #2</h5>
-
-                            </div>
-
-                    </div>
-                    <div class="col">
-
-                        <div class="container-fluid p-3 text-center rounded mx-auto px-auto" style="width: 97%; background-color: #A9A9A9;" >
-                    
-                            <h5>Room #3</h5>
-
-                            </div>
-
-                    </div>
-                    <div class="col">
-
-                        <div class="container-fluid p-3 text-center rounded mx-auto px-auto" style="width: 97%; background-color: #A9A9A9;" >
-                    
-                            <h5>Room #4</h5>
-
-                            </div>
-
-                    </div>
-
+                    {% endfor %}
                 </div>
 
                 <br>
 
                 <div class="row rounded text-center p-2 mx-auto px-auto" style="background-color: aliceblue;">
-                    <h3>Date</h3>
+                    
+                    <h4>Date</h4>
+                    
+                    <h3><i class="fa-regular fa-calendar" style="color: #78C2AD;"></i></h3>
+
                     <hr style=" height: 3px; border:none; color: #A9A9A9;background-color: #A9A9A9;">
                     <div class="col">
 
-                        <div class="container-fluid p-3 text-center rounded mx-auto px-auto" style=" background-color: #A9A9A9;" >
+                        <div class="container-fluid p-3 text-center rounded mx-auto px-auto">
                     
-                            <h2>Ngày đặt</h2>
+                            <input type="date" class="form-control me-2 rounded-pill shadow text-center" style="min-height: 70px;">
 
                             </div>
 
@@ -158,9 +137,9 @@
 
                     <div class="col">
 
-                        <div class="container-fluid p-3 text-center rounded mx-auto px-auto" style=" background-color: #A9A9A9;" >
+                        <div class="container-fluid p-3 text-center rounded mx-auto px-auto">
                     
-                            <h2>Ngày rời</h2>
+                            <input type="date" class="form-control me-2 rounded-pill shadow text-center" style="min-height: 70px;">
     
                             </div>
 
@@ -216,7 +195,7 @@
 
 <br>
 
-<div class="container text-center"><a class="btn btn-primary btn-lg" type="button" href="{% url 'search' %}"> Xem thêm </a>
+<div class="container text-center"><a class="btn btn-primary btn-lg" type="submit" href="{% url 'search' %}"> Xem thêm </a>
 
 <br>
 
