--- a/app1/templates/app1/login.html
+++ b/app1/templates/app1/login.html
@@ -7,7 +7,7 @@
 
     <body>
 
-        <div class="container bg-light shadow-md p-5 form-layout">
+        <div class="container bg-light shadow-md p-5 form-layout" style="max-width: 450px;">
 
             <h3> Đăng nhập vào tài khoản </h3>
 
