--- a/app1/templates/app1/register.html
+++ b/app1/templates/app1/register.html
@@ -6,7 +6,7 @@
 
     <body>
 
-        <div class="container bg-light shadow-md p-5 form-layout">
+        <div class="container bg-light shadow-md p-5 form-layout" style="max-width: 600px;">
 
             <h3> Tạo tài khoản </h3>
 
