--- a/app1/templates/app1/detail.html
+++ b/app1/templates/app1/detail.html
@@ -106,8 +106,19 @@
                     <div class="col">
 
                         <div class="container-fluid p-3 text-center rounded mx-auto px-auto" style="width: 97%; background-color: #D9D9D9;" >
+
+                        {% if rooms.is_booked == True %}
+
+                            <a style="color: red;" href="{% url 'room' pk=rooms.pk %}"target="_blank">Room Detail</a>
+
+                        {% else %}
+
                             <a href="{% url 'room' pk=rooms.pk %}"target="_blank">Room Detail</a>
-                            <h3>{{rooms.name}}</h5>
+
+                        {% endif %}
+
+                            <h3># {{rooms.name}}</h5>
+
                             <h5>{{rooms.price}}$</h5>
 
                             </div>
