--- a/app1/templates/app1/detail.html
+++ b/app1/templates/app1/detail.html
@@ -192,7 +192,7 @@
         {% for comment in comment %}
 
             <div class="col p-2 px-auto mx-auto">
-                <div class="p-3 border bg-light rounded">{{comment.body}}</div>
+                <div class="p-3 border bg-light rounded">{{comment.body}} <p class="d-flex justify-content-end">by{{comment.created_by}}</p></div>
             </div>
 
         {% endfor %}
