--- a/app1/templates/app1/navbar.html
+++ b/app1/templates/app1/navbar.html
@@ -62,7 +62,15 @@
 
             <li class="nav-item">
   
-              <a class="nav-link" href="{% url 'search' %}">List phòng&nbsp; </a>
+              <a class="nav-link" href="{% url 'search' %}">List phòng &nbsp; </a>
+  
+            </li>
+
+            &nbsp;     &nbsp;     &nbsp;
+
+            <li class="nav-item">
+  
+              <a class="nav-link" href="{% url 'bookinfo' %}">Phòng đã đặt &nbsp; </a>
   
             </li>
             
