--- a/app1/templates/app1/room.html
+++ b/app1/templates/app1/room.html
@@ -56,7 +56,7 @@
                     <div class="col-10 rounded p-2 px-auto mx-auto">
                         <div class="container-fluid p-3 text-center rounded mx-auto px-auto" style="width: 99%; background-color: aliceblue;" >
                     
-                        <h2># {{ rooms.name }}</h2>
+                        <h2>Phòng # {{ rooms.name }} của {{rooms.hotel}}</h2>
 
                         </div>
                     
