--- a/app1/templates/app1/room.html
+++ b/app1/templates/app1/room.html
@@ -98,7 +98,7 @@
 
                         <div class="container-fluid p-3 text-center rounded mx-auto px-auto">
                     
-                            {{form.book_in|as_crispy_field}}
+                            {{form.check_in|as_crispy_field}}
 
                             </div>
 
@@ -108,7 +108,7 @@
 
                         <div class="container-fluid p-3 text-center rounded mx-auto px-auto">
                     
-                            {{form.book_out|as_crispy_field}}
+                            {{form.check_out|as_crispy_field}}
     
                             </div>
 
