--- a/app1/templates/app1/homepage.html
+++ b/app1/templates/app1/homepage.html
@@ -62,7 +62,7 @@
 
     <div class="container text-center p-5 ">
         <div class="row row-cols-auto">
-          <div class="col"><img src="https://www.planetware.com/photos-large/VIE/vietnam-halong-bay.jpg" class="rounded-circle" style="max-width: 105px; height: 105px; object-fit: cover;" alt=""></div>
+          <div class="col"><img src="https://www.planetware.com/photos-large/VIE/vietnam-halong-bay.jpg" class="rounded-circle hpcircle" style="max-width: 105px; height: 105px; object-fit: cover;" alt=""></div>
           <div class="col"><img src="https://image-en.nhandan.vn/w800/Uploaded/2023/aslxvtxwtys/2023_03_31/vietnam-2762.jpg" class="rounded-circle" style="max-width: 105px; height: 105px; object-fit: cover;" alt=""></div>
           <div class="col"><img src="https://cdnimgen.vietnamplus.vn/uploaded/wbxx/2021_10_25/phocohoian12.jpg" class="rounded-circle" style="max-width: 105px; height: 105px; object-fit: cover;" alt=""></div>
           <div class="col"><img src="https://image.vietnamnews.vn/uploadvnnews/Article/2023/3/8/270447_4475075626262732_phongnha.jpg" class="rounded-circle" style="max-width: 105px; height: 105px; object-fit: cover;" alt=""></div>
@@ -86,7 +86,7 @@
 
       <form class="d-flex mx-auto text-center" style="max-width: 500px;" role="search"method="get" action="{% url 'search' %}">
         <input name="query" class="form-control me-2 rounded-pill shadow-sm" type="search" autocomplete="off" placeholder="Tìm kiếm" aria-label="Search" type="text" value="{{ query }}">
-        <button class="btn btn-light btn-outline-success rounded-pill shadow-sm" type="submit">Search</button>
+        <button class="btn btn-light btn-outline-success rounded-pill shadow-sm" type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
       </form> 
 
   </div>
