--- a/app1/templates/app1/room.html
+++ b/app1/templates/app1/room.html
@@ -13,7 +13,7 @@
 
     {% csrf_token %}
 
-<div class="container p-3 rounded shadow-md" style=" background-color: #78C2AD;">
+<div class="container p-3 rounded shadow-lg" style=" background-color: #78C2AD;">
     <div class="row">
         <div class="col-3">
 
@@ -26,15 +26,10 @@
                     {% endif %}
                     <br>
                     <br>
-                    {% if rooms.is_booked == True %}
 
-                        <h3 style="color: red;">Phòng đã bị đặt</h3>
+                        <h3 style="color: red;">Giá Phòng</h3>
+                        <h3>{{rooms.price}} $</h3>
 
-                        <h3 style="color: red;">bởi {{rooms.created_by}}</h3>
-                        
-                    {% else %}
-                        <h3 style="color: #78C2AD;">Phòng còn trống</h3>
-                    {% endif %}
 
 
                 </div>
@@ -70,14 +65,28 @@
 
                     <div class="container-fluid p-3 text-center rounded mx-auto px-auto" style="width: 97%; background-color: aliceblue;" >
                     
-                        <h4>Giá phòng</h4>
+                        <h4>Phòng đã bị đặt</h4>
                         <hr style=" height: 3px; border:none; color: #A9A9A9;background-color: #A9A9A9;">
-                        <div class="container rounded px-auto mx-auto p-3" style=" background-color: #D9D9D9;">
 
-                            <h3>{{ rooms.price }} $</h3>
+                            <div class="row row-cols-3 row-gap-4 p-3 text-center" style=" background-color: #D9D9D9;">
 
-                        </div>
-                        
+                                {% for bookings in bookings %}
+                                    {% if bookings.room == rooms %}
+
+                                        <div class="container rounded px-auto mx-auto text-center p-2" style="background-color: aliceblue; width: 30%;">
+
+                                            <h6 style="color: red;">{{ bookings.check_in }}</h6>
+                                            <h6>tới</h6>
+                                            <h6 style="color: red;">{{ bookings.check_out }}</h6>
+
+                                        </div>
+                                        &nbsp;
+                                
+                                    {% endif %}
+                                {% endfor %}
+
+                            </div>
+
                         </div>
 
                 </div>
@@ -86,7 +95,7 @@
 
                 <div class="row rounded text-center p-2 mx-auto px-auto" style="background-color: aliceblue;">
                     
-                    <h4>Date</h4>
+                    <h4>Chọn ngày đặt</h4>
                     
                     <h3><i class="fa-regular fa-calendar" style="color: #78C2AD;"></i></h3>
 
