--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -34,3 +34,11 @@
 .nav-item:hover {
     transform: scale(1.10);
 }
+
+.hpcircle {
+    transition: all 0.3s;
+}
+
+.hpcircle:hover {
+    transform: scale(1.15);
+}
