--- a/app1/templates/app1/comment.html
+++ b/app1/templates/app1/comment.html
@@ -7,7 +7,8 @@
 
         {% csrf_token %}
             
-        {{form.body|as_crispy_field}}
+        {{form.Đánh_giá|as_crispy_field}}
+        {{form.Nhận_xét|as_crispy_field}}
 
         <br>
         <div class="container d-flex justify-content-end">
