--- a/app1/templates/app1/bookinfo.html
+++ b/app1/templates/app1/bookinfo.html
@@ -3,17 +3,20 @@
 
     {% for bookings in bookings %}
 
-        {% if bookings.created_by == user %}
+        {% if bookings.created_by == request.user %}
             
 
                 <div class="container text-center">
-                    <a href="{% url 'room' pk=bookings.room.pk %}"target="_blank">
+                    <a href="{% url 'room' pk=bookings.room.id %}"target="_blank">
                         
                         <div class="p-6 bg-white rounded-b-xl">
                             <br>
-                            <h2 class="text-2xl hotelname"># {{ bookings.room }}</h2>
+                            <h2 class="text-2xl hotelname"># {{ bookings.room.name }} by {{ bookings.created_by}} từ {{bookings.check_in}} đến {{bookings.check_out}}</h2>
+                            <h3>Trạng thái: {{bookings.book_check}}</h3>
+                            
                         </div>
                     </a>
+                    <a href="{% url 'bookedroom' bookings.pk %}">Cancel</a>
                 </div>
 
 
