--- a/app1/templates/app1/detail.html
+++ b/app1/templates/app1/detail.html
@@ -150,7 +150,7 @@
         {% for comment in comment %}
 
             <div class="col p-2 px-auto mx-auto">
-                <div class="p-3 border bg-light rounded" style="word-wrap: break-word;">{{comment.body}} <p class="d-flex justify-content-end">by{{comment.created_by}}</p></div>
+                <div class="p-3 border bg-light rounded" style="word-wrap: break-word;">{{comment.Đánh_giá}} <p class="d-flex justify-content-end">by{{comment.created_by}}</p></div>
             </div>
 
         {% endfor %}
