--- a/app1/templates/app1/bookinfo.html
+++ b/app1/templates/app1/bookinfo.html
@@ -7,7 +7,7 @@
             
 
                 <div class="container text-center">
-                    <a href="{% url 'room' pk=bookings.room.id %}"target="_blank">
+                    <a href="{% url 'bookedroom' bookings.pk %}">
                         
                         <div class="p-6 bg-white rounded-b-xl">
                             <br>
