--- a/app1/templates/app1/bookedroom.html
+++ b/app1/templates/app1/bookedroom.html
@@ -2,7 +2,93 @@
 {% block content %}
 
     {% for bookings in bookings %}
-        <a href="{% url 'cancel' bookings.pk %}" class="btn btn-danger"><button type="submit" > Cancel</button></a>
+    <div class="container p-3 rounded shadow-lg" style=" background-color: #78C2AD;">
+        <div class="row">
+            <div class="col-3">
+    
+                <div class="row px-auto mx-auto">
+                    
+                    <div class="container-fluid p-3 text-center rounded mx-auto px-auto" style=" width: 90%; background-color: aliceblue;">
+    
+                        {% if rooms.image %} 
+                        <img src="{{ rooms.image.url }}" class="rounded shadow-lg" style="width: 200px; height: 250px; object-fit: cover;" alt="ảnh lỗi r huhu">
+                        {% endif %}
+                        <br>
+                        <br>
+    
+                            <h3 style="color: red;">Giá Phòng</h3>
+                            <h3>{{bookings.room.price}} $</h3>
+    
+    
+    
+                    </div>
+    
+                    
+                </div>
+                <br>
+                <div class="row px-auto mx-auto">                
+    
+                </div>
+    
+    
+            </div>
+    
+            <div class="col-9">
+    
+                    <div class="row">
+    
+                        <div class="col-10 rounded p-2 px-auto mx-auto">
+                            <div class="container-fluid p-3 text-center rounded mx-auto px-auto" style="width: 99%; background-color: aliceblue;" >
+                        
+                            <h2>Phòng # {{ bookings.room.name }} của {{bookings.room.hotel}}</h2>
+    
+                            </div>
+                        
+                        </div>
+    
+                    </div>
+    
+                    <br>
+    
+                    <div class="row">
+    
+                        <div class="container-fluid p-3 text-center rounded mx-auto px-auto" style="width: 97%; background-color: aliceblue;" >
+                        
+                            <h4>Phòng đã bị đặt</h4>
+                            <hr style=" height: 3px; border:none; color: #A9A9A9;background-color: #A9A9A9;">
+    
+                                <div class="row row-cols-3 row-gap-4 p-3 text-center" style=" background-color: #D9D9D9;">
+    
+    
+                                            <div class="container rounded px-auto mx-auto text-center p-2" style="background-color: aliceblue; width: 30%;">
+    
+                                                <h6 style="color: red;">{{ bookings.check_in }}</h6>
+                                                <h6>tới</h6>
+                                                <h6 style="color: red;">{{ bookings.check_out }}</h6>
+    
+                                            </div>
+                                            &nbsp;
+                                    
+
+    
+                                </div>
+    
+                            </div>
+    
+                    </div>
+    
+                    <br>
+    
+        <br>
+    
+    </div>
+
+    <div class="d-flex justify-content-end">
+
+        <a href="{% url 'cancel' bookings.pk %}"><button type="submit" class="btn btn-danger btn-lg"> Hủy Phòng </button></a>
+    
+    </div>
+
     {% endfor %}
 
 {% endblock %}
