--- a/app1/templates/app1/detail.html
+++ b/app1/templates/app1/detail.html
@@ -107,7 +107,7 @@
 
                         <div class="container-fluid p-3 text-center rounded mx-auto px-auto" style="width: 97%; background-color: #D9D9D9;" >
 
-                            <a href="{% url 'room' pk=rooms.pk %}"target="_blank">Room Detail</a>
+                            <a href="{% url 'room' pk=rooms.pk %}">Room Detail</a>
 
 
                             <h3># {{rooms.name}}</h5>
