--- a/app1/templates/app1/comment.html
+++ b/app1/templates/app1/comment.html
@@ -14,7 +14,7 @@
         <div class="container d-flex justify-content-end">
 
             <button type="submit" class="btn btn-primary"> 
-                Comment
+                Đánh giá
     
             </button>
             
