--- a/app1/templates/app1/detail.html
+++ b/app1/templates/app1/detail.html
@@ -34,7 +34,7 @@
 
                     <div class="container rounded px-auto mx-auto p-3" style="min-height: 250px; background-color: #D9D9D9;">
 
-                        <h4>{{hotel.rating}} <i class="fa-solid fa-star" style="color: #fcff52;"></i></h4>
+                        <h4>{{hotel.rating_average|floatformat:1}} <i class="fa-solid fa-star" style="color: #fcff52;"></i></h4>
                         
 
                     </div>
@@ -150,7 +150,7 @@
         {% for comment in comment %}
 
             <div class="col p-2 px-auto mx-auto">
-                <div class="p-3 border bg-light rounded" style="word-wrap: break-word;">{{comment.Đánh_giá}} <p class="d-flex justify-content-end">by{{comment.created_by}}</p></div>
+                <div class="p-3 border bg-light rounded" style="word-wrap: break-word;">{{comment.Đánh_giá|floatformat:1}} {{comment.Nhận_xét}}<p class="d-flex justify-content-end">by{{comment.created_by}}</p></div>
             </div>
 
         {% endfor %}
@@ -160,7 +160,7 @@
 
 <br>
 
-<div class="container text-center"><a class="btn btn-primary btn-lg" type="submit" href="{% url 'comment' hotel.id %}"> Bình luận </a>
+<div class="container text-center"><a class="btn btn-primary btn-lg" type="submit" href="{% url 'comment' hotel.id %}">Đánh giá </a>
 
 <br>
 
