--- a/app1/templates/app1/info.html
+++ b/app1/templates/app1/info.html
@@ -10,7 +10,7 @@
 
             <h3> Tài khoản </h3>
 
-            <h5> Thông tin của {{user}}  <i class="fa fa-user" aria-hidden="true"></i>  </h5>
+            <h5> Thông tin của {{user}} &nbsp; <i class="fa fa-user" aria-hidden="true"></i>  </h5>
             <br>
             <hr>
             <br>
