--- a/app1/templates/app1/room.html
+++ b/app1/templates/app1/room.html
@@ -27,8 +27,8 @@
                     <br>
                     <br>
 
-                        <h3 style="color: red;">Giá Phòng</h3>
-                        <h3>{{rooms.price}} $</h3>
+                        <h3 class="text-danger">Giá Phòng</h3>
+                        <h3>{{rooms.price}} <b class="text-warning">$</b></h3>
 
 
 
@@ -75,9 +75,9 @@
 
                                         <div class="container rounded px-auto mx-auto text-center p-2" style="background-color: aliceblue; width: 30%;">
 
-                                            <h6 style="color: red;">{{ bookings.check_in }}</h6>
+                                            <h6 class="text-info">{{ bookings.check_in }}</h6>
                                             <h6>tới</h6>
-                                            <h6 style="color: red;">{{ bookings.check_out }}</h6>
+                                            <h6 class="text-info"">{{ bookings.check_out }}</h6>
 
                                         </div>
                                         &nbsp;
