--- a/app1/templates/app1/bookedroom.html
+++ b/app1/templates/app1/bookedroom.html
@@ -10,8 +10,8 @@
                     
                     <div class="container-fluid p-3 text-center rounded mx-auto px-auto" style=" width: 90%; background-color: aliceblue;">
     
-                        {% if rooms.image %} 
-                        <img src="{{ rooms.image.url }}" class="rounded shadow-lg" style="width: 200px; height: 250px; object-fit: cover;" alt="ảnh lỗi r huhu">
+                        {% if bookings.room.image %} 
+                        <img src="{{ bookings.room.image.url }}" class="rounded shadow-lg" style="width: 200px; height: 250px; object-fit: cover;" alt="ảnh lỗi r huhu">
                         {% endif %}
                         <br>
                         <br>
@@ -60,7 +60,7 @@
                                 <div class="row row-cols-3 row-gap-4 p-3 text-center" style=" background-color: #D9D9D9;">
     
     
-                                            <div class="container rounded px-auto mx-auto text-center p-2" style="background-color: aliceblue; width: 30%;">
+                                            <div class="container rounded px-auto mx-auto text-center p-2" style="background-color: aliceblue;">
     
                                                 <h6 style="color: red;">{{ bookings.check_in }}</h6>
                                                 <h6>tới</h6>
