--- a/app1/templates/app1/bookinfo.html
+++ b/app1/templates/app1/bookinfo.html
@@ -11,12 +11,11 @@
                         
                         <div class="p-6 bg-white rounded-b-xl">
                             <br>
-                            <h2 class="text-2xl hotelname"># {{ bookings.room.name }} by {{ bookings.created_by}} từ {{bookings.check_in}} đến {{bookings.check_out}}</h2>
-                            <h3>Trạng thái: {{bookings.book_check}}</h3>
+                            <h3 class="text-2xl"># {{ bookings.room.name }} by {{ bookings.created_by}} từ {{bookings.check_in}} đến {{bookings.check_out}}</h>
+                            <h4>Trạng thái: {{bookings.book_check}}</h4>
                             
                         </div>
                     </a>
-                    <a href="{% url 'bookedroom' bookings.pk %}">Cancel</a>
                 </div>
 
 
