--- a/app1/templates/app1/detail.html
+++ b/app1/templates/app1/detail.html
@@ -105,16 +105,21 @@
                     {% for rooms in rooms %}
                     <div class="col">
 
-                        <div class="container-fluid p-3 text-center rounded mx-auto px-auto" style="width: 97%; background-color: #D9D9D9;" >
+                        <div class="container room rounded">
 
-                            <a href="{% url 'room' pk=rooms.pk %}">Room Detail</a>
+                            <a href="{% url 'room' pk=rooms.pk %}" style="text-decoration: none;">
 
+                                <div class="container-fluid p-3 text-center rounded mx-auto px-auto">
 
-                            <h3># {{rooms.name}}</h5>
+                                    <h3># {{rooms.name}}</h5>
 
-                            <h5>{{rooms.price}}$</h5>
+                                    <h5>{{rooms.price}}$</h5>
 
-                            </div>
+                                </div>
+
+                            </a> 
+
+                        </div>
 
                     </div>
                     {% endfor %}
