--- a/app1/templates/app1/homepage.html
+++ b/app1/templates/app1/homepage.html
@@ -8,19 +8,19 @@
 
     <br>
 
-    <div class="container-fluid text-center"><h2 style="color: #78C2AD;"><b>Hotel booking</b></h2></div>
+    <div class="container-fluid text-center"><h2 style="color: #78C2AD;"><b>Trang Chủ</b></h2></div>
 
     <hr style="height: 5px; border:none; color: #A9A9A9;background-color: #A9A9A9;">
     <br>
 
     <div class="container p-5">
         <div class="mx-auto d-block">
-          <img src="https://hoteldel.com/wp-content/uploads/2021/03/hotel-del-coronado-views-suite-K1TOS1-K1TOJ1-1600x1000-1.jpg" class=" rounded shadow-lg" style="width: 100%; height: 380px; object-fit: cover" alt="">
+          <img src="https://hoteldel.com/wp-content/uploads/2021/03/hotel-del-coronado-views-suite-K1TOS1-K1TOJ1-1600x1000-1.jpg" class="banner rounded shadow-lg" style="width: 100%; height: 380px; object-fit: cover" alt="">
         </div>
       </div>
 
     <br>
-    <div class="container-fluid text-center"><h2 style="color: #78C2AD;"><b>Popular Hotels</b></h2></div>
+    <div class="container-fluid text-center"><h2 style="color: #78C2AD;"><b>Các khách sạn phổ biến</b></h2></div>
 
     <hr style="height: 5px; border:none; color: #A9A9A9;background-color: #A9A9A9;">
 
@@ -30,7 +30,7 @@
         <div class="row row-cols-3 row-gap-5 col-gap-5">
           {% for hotel in hotels|slice:"0:6" %}
                     <div>
-                        <a href="{% url 'detail' hotel.id %}">
+                        <a href="{% url 'detail' hotel.id %}" style="text-decoration: none;">
                             <div class="cards">
                                 {% if hotel.image %}
                                 <img src="{{hotel.image.url }}" class="rounded shadow-lg" style="width: 200px; height: 250px; object-fit: cover">
@@ -39,6 +39,7 @@
     
                             <div class="p-6 bg-white rounded-b-xl">
                                 <br>
+                                <h5><i class="fa-solid fa-star text-warning"></i>&nbsp; {{hotel.rating_average|floatformat:1}}</h5>
                                 <h2 class="text-2xl hotelname">{{ hotel.name }}</h2>
                             </div>
                         </a>
@@ -56,26 +57,26 @@
 
     <br>
 
-    <div class="container-fluid text-center"><h2 style="color: #78C2AD;"><b>Popular destinations</b></h2></div>
+    <div class="container-fluid text-center"><h2 style="color: #78C2AD;"><b>Các địa danh nổi tiếng</b></h2></div>
 
     <hr style="height: 5px; border:none; color: #A9A9A9;background-color: #A9A9A9;">
 
-    <div class="container text-center p-5 ">
+    <div class="container text-center p-5 " style="object-fit: cover;">
         <div class="row row-cols-auto">
-          <div class="col"><img src="https://www.planetware.com/photos-large/VIE/vietnam-halong-bay.jpg" class="rounded-circle hpcircle" style="max-width: 105px; height: 105px; object-fit: cover;" alt=""></div>
-          <div class="col"><img src="https://image-en.nhandan.vn/w800/Uploaded/2023/aslxvtxwtys/2023_03_31/vietnam-2762.jpg" class="rounded-circle" style="max-width: 105px; height: 105px; object-fit: cover;" alt=""></div>
-          <div class="col"><img src="https://cdnimgen.vietnamplus.vn/uploaded/wbxx/2021_10_25/phocohoian12.jpg" class="rounded-circle" style="max-width: 105px; height: 105px; object-fit: cover;" alt=""></div>
-          <div class="col"><img src="https://image.vietnamnews.vn/uploadvnnews/Article/2023/3/8/270447_4475075626262732_phongnha.jpg" class="rounded-circle" style="max-width: 105px; height: 105px; object-fit: cover;" alt=""></div>
-          <div class="col"><img src="https://www.planetware.com/wpimages/2020/04/vietnam-best-places-to-visit-my-son.jpg" class="rounded-circle" style="max-width: 105px; height: 105px; object-fit: cover;" alt=""></div>
-          <div class="col"><img src="https://kyorktravel.com/vn/userfiles/mobile/slide_1_mobile.jpg" class="rounded-circle" style="max-width: 105px; height: 105px; object-fit: cover;" alt=""></div>
-          <div class="col"><img src="https://vir.com.vn/stores/news_dataimages/hung/052021/15/18/in_article/vietnam-a-safe-destination-for-development-of-fdi.jpg" class="rounded-circle" style="max-width: 105px; height: 105px; object-fit: cover;" alt=""></div>
-          <div class="col"><img src="https://d1bv4heaa2n05k.cloudfront.net/user-images/1527666431501/shutterstock-1027928194_main_1527666482525.jpeg" class="rounded-circle" style="max-width: 105px; height: 105px; object-fit: cover;" alt=""></div>
+          <div class="col"><a href="{% url 'search' %}?query=Ha+Long" style="text-decoration: none;"><img src="https://www.planetware.com/photos-large/VIE/vietnam-halong-bay.jpg" class="rounded-circle hpcircle" style="max-width: 105px; height: 105px; object-fit: cover;" alt=""><h3>asd</h3></a></div>
+          <div class="col"><a href="{% url 'search' %}" style="text-decoration: none;"><img src="https://image-en.nhandan.vn/w800/Uploaded/2023/aslxvtxwtys/2023_03_31/vietnam-2762.jpg" class="rounded-circle hpcircle" style="max-width: 105px; height: 105px; object-fit: cover;" alt=""></a></div>
+          <div class="col"><a href="{% url 'search' %}" style="text-decoration: none;"><img src="https://cdnimgen.vietnamplus.vn/uploaded/wbxx/2021_10_25/phocohoian12.jpg" class="rounded-circle hpcircle" style="max-width: 105px; height: 105px; object-fit: cover;" alt=""></a></div>
+          <div class="col"><a href="{% url 'search' %}" style="text-decoration: none;"><img src="https://image.vietnamnews.vn/uploadvnnews/Article/2023/3/8/270447_4475075626262732_phongnha.jpg" class="rounded-circle hpcircle" style="max-width: 105px; height: 105px; object-fit: cover;" alt=""></a></div>
+          <div class="col"><a href="{% url 'search' %}" style="text-decoration: none;"><img src="https://www.planetware.com/wpimages/2020/04/vietnam-best-places-to-visit-my-son.jpg" class="rounded-circle hpcircle" style="max-width: 105px; height: 105px; object-fit: cover;" alt=""></a></div>
+          <div class="col"><a href="{% url 'search' %}" style="text-decoration: none;"><img src="https://kyorktravel.com/vn/userfiles/mobile/slide_1_mobile.jpg" class="rounded-circle hpcircle" style="max-width: 105px; height: 105px; object-fit: cover;" alt=""></a></div>
+          <div class="col"><a href="{% url 'search' %}" style="text-decoration: none;"><img src="https://vir.com.vn/stores/news_dataimages/hung/052021/15/18/in_article/vietnam-a-safe-destination-for-development-of-fdi.jpg" class="rounded-circle hpcircle" style="max-width: 105px; height: 105px; object-fit: cover;" alt=""></a></div>
+          <div class="col"><a href="{% url 'search' %}" style="text-decoration: none;"><img src="https://d1bv4heaa2n05k.cloudfront.net/user-images/1527666431501/shutterstock-1027928194_main_1527666482525.jpeg" class="rounded-circle hpcircle" style="max-width: 105px; height: 105px; object-fit: cover;" alt=""></a></div>
         </div>
       </div>
 
     <br>
 
-    <div class="container-fluid text-center"><h3 style="color: #78C2AD;"><b>Search your destination!</b></h3></div>
+    <div class="container-fluid text-center"><h3 style="color: #78C2AD;"><b>Tìm kiếm địa điểm</b></h3></div>
 
     
     <hr style="height: 5px; border:none; color: #A9A9A9;background-color: #A9A9A9;">
