--- a/app1/templates/app1/search.html
+++ b/app1/templates/app1/search.html
@@ -43,15 +43,17 @@
             
                 {% for hotel in hotels %}
                     <div class="cards rounded p-5">
-                        <a href="{% url 'detail' hotel.id %}">
+                        <a href="{% url 'detail' hotel.id %}" style="text-decoration: none;">
                             <div>
                                 {% if hotel.image %}
                                 <img src="{{hotel.image.url }}" class="rounded shadow-lg" style="width: 200px; height: 250px; object-fit: cover">
                                 {% endif %}
                             </div>
     
+                            <br>
+
                             <div class="p-6 bg-white rounded-b-xl">
-                                <h4 class="text-2xl hotelname">{{ hotel.adress }}</h4>
+                                <h5 class="text-2xl hotelname"><i class="fa-solid fa-star text-warning">&nbsp;</i>{{ hotel.rating_average|floatformat:1 }} <br><i class="fa-solid fa-location-dot text-info">&nbsp;</i>{{ hotel.adress }}</h5>
                             </div>
 
                             <div class="p-6 bg-white rounded-b-xl">
