--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -40,5 +40,24 @@
 }
 
 .hpcircle:hover {
-    transform: scale(1.15);
+    transform: scale(1.10);
+    filter: brightness(80%);
+}
+
+.banner {
+    transition: all 0.3s;
+}
+
+.banner:hover {
+    filter: brightness(60%);
+
+}
+
+.room {
+    transition: all 0.3s;
+    background-color: #D9D9D9;
+}
+
+.room:hover {
+    background-color: #A9A9A9;
 }
