--- a/app1/templates/app1/detail.html
+++ b/app1/templates/app1/detail.html
@@ -4,7 +4,7 @@
 
 
 {% block content %}
-<div class="container-fluid text-center"><h2 style="color: #78C2AD;"><b>Booking section</b></h2></div>
+<div class="container-fluid text-center"><h2 style="color: #78C2AD;"><b>Chi tiết khách sạn</b></h2></div>
 
 <hr style="height: 5px; border:none; color: #A9A9A9;background-color: #A9A9A9;">
 <br>
@@ -52,19 +52,12 @@
                 <div class="row">
 
                     <div class="col-10 rounded p-2 px-auto mx-auto">
-                        <div class="container-fluid p-3 text-center rounded mx-auto px-auto" style="width: 99%; background-color: aliceblue;" >
+                        <div class="container-fluid p-3 text-center rounded mx-auto px-auto" style=" background-color: aliceblue;" >
                     
                         <h2>{{ hotel.name }}</h2>
 
                         </div>
                     
-                    </div>
-                        <div class="col-2 rounded p-2 px-auto mx-auto">
-                            <div class="container-fluid p-3 rounded mx-auto px-auto bg-warning" style="width: 93%; height: 101%;">
-                    
-                        <h3>Ghim</h3>
-
-                        </div>
                     </div>
 
                 </div>
@@ -142,7 +135,7 @@
 
 <hr style="height: 5px; border:none; color: #A9A9A9;background-color: #A9A9A9;">
 
-<div class="container-fluid text-center"><h2 style="color: #78C2AD;"><b>Người dùng đánh giá</b></h2></div>
+<div class="container-fluid text-center"><h2 style="color: #78C2AD;"><b>Người dùng đánh giá & bình luận</b></h2></div>
 
 <hr style="height: 5px; border:none; color: #A9A9A9;background-color: #A9A9A9;">
 
@@ -165,7 +158,7 @@
 
 <br>
 
-<div class="container text-center"><a class="btn btn-primary btn-lg" type="submit" href="{% url 'comment' hotel.id %}">Đánh giá </a>
+<div class="container text-center"><a class="btn btn-primary btn-lg" type="submit" href="{% url 'comment' hotel.id %}">Tạo đánh giá </a>
 
 <br>
 
