--- a/app1/templates/app1/detail.html
+++ b/app1/templates/app1/detail.html
@@ -106,7 +106,7 @@
 
                                     <h3># {{rooms.name}}</h5>
 
-                                    <h5>{{rooms.price}}$</h5>
+                                    <h5>{{rooms.price}} đ</h5>
 
                                 </div>
 
