--- a/app1/templates/app1/homepage.html
+++ b/app1/templates/app1/homepage.html
@@ -14,10 +14,28 @@
     <br>
 
     <div class="container p-5">
-        <div class="mx-auto d-block">
-          <img src="https://hoteldel.com/wp-content/uploads/2021/03/hotel-del-coronado-views-suite-K1TOS1-K1TOJ1-1600x1000-1.jpg" class="banner rounded shadow-lg" style="width: 100%; height: 380px; object-fit: cover" alt="">
+      <div id="carouselIndicators" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="banner rounded shadow-lg" style="width: 100%; height: 380px; object-fit: cover" src="https://www.usatoday.com/gcdn/-mm-/05b227ad5b8ad4e9dcb53af4f31d7fbdb7fa901b/c=0-64-2119-1259/local/-/media/USATODAY/USATODAY/2014/08/13/1407953244000-177513283.jpg" alt="First slide">
+          </div>
+          <div class="carousel-item">
+            <img class="banner rounded shadow-lg" style="width: 100%; height: 380px; object-fit: cover" src="https://hanoihotel.com.vn/wp-content/uploads/sites/97/2020/04/hanoi-hotel17942.jpg" alt="Second slide">
+          </div>
+          <div class="carousel-item">
+            <img class="banner rounded shadow-lg" style="width: 100%; height: 380px; object-fit: cover" src="https://static.leonardo-hotels.com/image/leonardohotelbucharestcitycenter_room_comfortdouble2_2022_4000x2600_7e18f254bc75491965d36cc312e8111f_1200x780_mobile_3.jpeg" alt="Third slide">
+          </div>
         </div>
+        <a class="carousel-control-prev" href="#carouselIndicators" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselIndicators" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
       </div>
+    </div>
 
     <br>
     <div class="container-fluid text-center"><h2 style="color: #78C2AD;"><b>Các khách sạn phổ biến</b></h2></div>
