--- a/app1/templates/app1/bookinfo.html
+++ b/app1/templates/app1/bookinfo.html
@@ -18,7 +18,7 @@
                                                     
                             <div class="rounded-b-xl">
                                 <br>
-                                <h3 class="text-white">Phòng {{ bookings.room.name }} từ {{bookings.check_in}} đến {{bookings.check_out}}</h3>
+                                <h3 class="text-white">Phòng {{ bookings.room.name }} từ <b class="text-secondary">{{bookings.check_in}}</b> đến <b class="text-secondary">{{bookings.check_out}}</b></h3>
                                 <br>
                             </div>
                         
