--- a/app1/templates/app1/room.html
+++ b/app1/templates/app1/room.html
@@ -4,7 +4,7 @@
 
 {% block content %}
     
-<div class="container-fluid text-center"><h2 style="color: #78C2AD;"><b>Booking section</b></h2></div>
+<div class="container-fluid text-center"><h2 style="color: #78C2AD;"><b>Đặt Phòng</b></h2></div>
 
 <hr style="height: 5px; border:none; color: #A9A9A9;background-color: #A9A9A9;">
 <br>
@@ -28,7 +28,7 @@
                     <br>
 
                         <h3 class="text-danger">Giá Phòng</h3>
-                        <h3>{{rooms.price}} <b class="text-warning">$</b></h3>
+                        <h3>{{rooms.price}} <b class="text-warning">đ</b></h3>
 
 
 
