--- a/app1/templates/app1/homepage.html
+++ b/app1/templates/app1/homepage.html
@@ -18,6 +18,10 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img class="banner rounded shadow-lg" style="width: 100%; height: 380px; object-fit: cover" src="https://www.usatoday.com/gcdn/-mm-/05b227ad5b8ad4e9dcb53af4f31d7fbdb7fa901b/c=0-64-2119-1259/local/-/media/USATODAY/USATODAY/2014/08/13/1407953244000-177513283.jpg" alt="First slide">
+            <div class="carousel-caption d-none d-md-block">
+              <h4 class="text-white">"Điều đáng sợ nhất đối với mỗi người là mỗi ngày thức dậy. Và nhận ra trong cuộc sống mình không có người và điều gì để chờ đợi, cố gắng."
+              </h4>
+            </div>
           </div>
           <div class="carousel-item">
             <img class="banner rounded shadow-lg" style="width: 100%; height: 380px; object-fit: cover" src="https://hanoihotel.com.vn/wp-content/uploads/sites/97/2020/04/hanoi-hotel17942.jpg" alt="Second slide">
